# LLaVA-Pool

./: .gitignore  Makefile  README.md  debug.sh  eval.sh  infer.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
data/: README.md  dataset_config.json  demo.json
evaluation/vqa/: eval_kor.py  eval_vqa.py
examples/: debug.yaml  internvl2_5_full_sft.yaml  magma_full_pret.yaml  qwen2.5_full_sft.yaml  qwen2vl_full_sft.yaml  qwen2vl_lora_dpo.yaml  qwen2vl_lora_sft.yaml
scripts/: zero3.json
src/: upload_model.py
src/llavapool/: run.py  train.py
src/llavapool/config/: params.py
src/llavapool/data/: __init__.py  collator.py  conversation.py  converter.py  data.py  data_loader.py  dataset_config.py  formatter.py  template.py  tool_utils.py
src/llavapool/data/strategy/: __init__.py  (+3 more)
src/llavapool/hparams/: data_args.py  evaluation_args.py  finetuning_args.py  model_args.py  parser.py
src/llavapool/model/: __init__.py  adapter.py  model_loader.py  patcher.py
src/llavapool/pool/: __init__.py
src/llavapool/train/: __init__.py  callbacks.py  test_utils.py  train_utils_ori.py  trainer.py  trainer_utils.py  tuner.py
src/llavapool/utils/: constants.py  env.py  logging.py  misc copy.py  misc.py  packages.py  ploting.py
src/training/: constants.py  data.py  train.py  trainer.py
tests/: test_style.py
tests/unit/test_data/: test_collator.py  test_data_loader.py  test_dataset_config.py  test_template.py
tests/unit/test_model/: test_model_loader.py
tests/unit/test_train/: test_trainer_utils.py  test_workflow.py
utils/: get_modified_files.py
(+39 files in other folders)
